Update layout, fonts, picto

--- a/app/front/styles/application/layout.sass
+++ b/app/front/styles/application/layout.sass
@@ -6,6 +6,7 @@
 html, body
   height: 100%
   margin: 0
+  font-family: 'ITC Avant Garde Gothic Std Book'
 
 // MENU
 .mobile-menu
@@ -49,6 +50,15 @@ html, body
   height: 15px
 .footer-line-xl
   height: 2rem
+.footer-title
+  @apply text-xl
+  @apply uppercase
+  @apply text-primary
+
+.footer-link
+  @apply uppercase
+  @apply text-gray-600
+  @apply text-sm
 
 .separator
   border-left: 1px solid var(--color-primary)
