--- a/app/views/layouts/administration.html.slim
+++ b/app/views/layouts/administration.html.slim
@@ -1,7 +1,7 @@
 doctype html
 html lang="#{I18n.locale}"
   head
-    title = "Admin #{Setting.project_name}"
+    title = "Admin #{Setting.pole_name}"
     meta http-equiv="content-type" content="text/html;charset=UTF-8"
 
     / = stylesheet_packs_with_chunks_tag 'administration', media: 'all', 'data-turbolinks-track': 'reload'
@@ -20,7 +20,7 @@ html lang="#{I18n.locale}"
           aside
             ul.nav.flex-column
               li.nav-item.brand
-                = link_to "#{Setting.project_name} Admin", admin_root_path, class: "nav-link "
+                = link_to "#{Setting.pole_name} Admin", admin_root_path, class: "nav-link "
               li.nav-item
                 = active_link_to 'Tableau de bord', admin_root_path, title: "Retour à l'accueil", class: "nav-link", active: :exclusive
               li.nav-item.nav-header 
