--- a/app/front/styles/application.scss
+++ b/app/front/styles/application.scss
@@ -1,3 +1,4 @@
+@import "application/font-face.scss";
 @import "application/layout.sass";
 @import "application/form.sass";
 @import "application/flash-message.sass";
