--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -94,9 +94,9 @@ html lang='fr'
                 li = link_to "Chiffres clés", key_numbers_path, class: "footer-link"
                 li = link_to "Ressources", resources_path, class: "footer-link"
           .separator.h-7.my-auto
-          .w-full.md:w-1/3.py-3.md:py-8.px-3.text-gray-600
+          .w-full.md:w-1/3.py-3.md:py-8.px-8.text-gray-600
             - if Setting.logo_primary.present?
-              => image_tag Setting.logo_primary.variant(resize_to_limit: [nil, 150]), class: ""
+              => image_tag Setting.logo_primary.variant(resize_to_limit: [nil, 150]), class: "mb-5"
             - if Setting.pole_name.present?
               p.uppercase= Setting.pole_name
             - if Setting.pole_address.present?
