--- a/app/views/events/_event_card.html.slim
+++ b/app/views/events/_event_card.html.slim
@@ -5,4 +5,4 @@
     .text-sm.leading-tight= item.month
     .text-xs.leading-tight= item.year
   .p-2
-    = link_to item.title, item.url, target: "_blank", class: 'itc-demi uppercase'
+    = link_to item.title, item.url, target: "_blank", class: 'itc-demi uppercase text-sm'
