--- a/app/views/admin/formations/_form.html.slim
+++ b/app/views/admin/formations/_form.html.slim
@@ -46,19 +46,6 @@
               = f.label :city
               = f.text_field :city, class: 'form-control'
 
-  fieldset
-    legend Date(s)
-    div data-controller="nested-fields"
-      template data-target="nested-fields.template"
-        = f.fields_for :schedules, Schedule.new, child_index: 'NEW_RECORD' do |schedule|
-          = render "schedule_fields", f: schedule
-
-      = f.fields_for :schedules do |ff|
-        = render "schedule_fields", f: ff
-
-      .text-center.mb-3 data-target="nested-fields.links" 
-        = link_to "#", class: "btn btn-info btn-sm", data: { action: "click->nested-fields#add_association" } do
-          i.far.fa-plus-square>
-          ' Ajouter une date
+  = render 'admin/schedules/schedules_form', f: f
 
 = render "admin/shared/action_btns", f: f, index_path: admin_formations_path
