--- a/app/views/adherents/index.html.slim
+++ b/app/views/adherents/index.html.slim
@@ -1,5 +1,5 @@
 .container.mx-auto.mb-3
-  / = render 'home/breadcrumb'
+  = render 'home/breadcrumb'
   h1.text-6xl.font-bold.text-center.mt-16.mb-16.text-gray-900 Adhérents
 
   - @adherent_categories.each do |category|
