--- a/app/views/themes/show.html.slim
+++ b/app/views/themes/show.html.slim
@@ -7,20 +7,23 @@
 
 
   .flex
-    .w-2/3
-      h3.text-2xl.font-bold.mb-3 Les actions en lien avec ce thème
-      ul
-        - @theme.activities.enabled.order_by_theme_interface_position.each do |activity|
-          li = link_to activity.title, activity_path(activity), class: "underline"
+    - if @theme.activities.enabled.any?
+      .w-2/3
+        h3.text-2xl.font-bold.mb-3 Nos actions
+        ul
+          - @theme.activities.enabled.order_by_theme_interface_position.each do |activity|
+            li = link_to activity.title, activity_path(activity), class: "underline"
 
-    - if @theme.resources.any?
+
+    - if @theme.resources.enabled.any?
       .w-1/3
         h3.text-2xl.font-bold.mb-3 Ressources
         ul
-          = render partial: 'resources/resource', collection: @theme.resources, as: :resource
+          = render partial: 'resources/resource', collection: @theme.resources.enabled, as: :resource
 
-  h2.text-2xl.font-bold.mt-12.mb-4 Les actualités en lien avec ce thème
-  .flex
-    - @theme.posts.each do |post|
-      .w-1/2
-        = render 'posts/card', post: post
+  - if @theme.posts.published.any?
+    h2.text-2xl.font-bold.mt-12.mb-4 Les actualités en lien avec ce thème
+    .flex
+      - @theme.posts.published.each do |post|
+        .w-1/2
+          = render 'posts/card', post: post
