--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -28,18 +28,18 @@ html lang='fr'
             - if Setting.logo.present?
               => image_tag Setting.logo.variant(resize_to_limit: [nil, 75]), class: "mr-3", title: Setting.pole_name
             / span.font-semibold.text-xl.tracking-tight = Setting.pole_name
-        .flex.items-center.flex-1.justify-end.px-6.py-4.bg-gray-100
+        .flex.items-center.flex-1.justify-end.px-6.py-4
           .flex.text-xs.md:text-sm.items-center.justify-end
-            = link_to main_page_path(@membership_page), class: "hidden md:flex flex-col items-center px-2 uppercase text-primary" do
+            = link_to main_page_path(@membership_page), class: "hidden picto-link px-2" do
               = image_pack_tag "picto/Picto-adhesion.svg", class: "w-10 mb-2"
               ' Adhésion
-            = link_to formations_path, class: "flex flex-col items-center px-2 uppercase text-primary" do
+            = link_to formations_path, class: "picto-link px-2" do
               = image_pack_tag "picto/Picto-formations.svg", class: "w-10 mb-2"
               ' Formations
-            = link_to main_page_path(@ess_map_page), class: "hidden md:flex flex flex-col items-center px-2 uppercase text-primary" do
+            = link_to main_page_path(@ess_map_page), class: "hidden picto-link px-2" do
               = image_pack_tag "picto/Picto-carto.svg", class: "w-10 mb-2"
               ' Cartographie
-            = link_to basic_page_path(@contact_page), class: "flex flex-col items-center pl-2 uppercase text-primary" do
+            = link_to basic_page_path(@contact_page), class: "picto-link pl-2" do
               = image_pack_tag "picto/Picto-adhesion.svg", class: "w-10 mb-2"
               ' Contact
       nav.relative.bg-white.px-6.hidden.md:block data-target="main-menu.mobileMenu"
@@ -71,7 +71,7 @@ html lang='fr'
               = f.email_field :email, placeholder: 'Votre email', 'aria-label': 'Votre email', required: true, class: "flex-1 px-2 block w-full rounded-none border border-gray-300 mx-3"
               = f.submit 'Envoyer', class: 'button bold', class: 'inline-flex items-center px-3 border border-gray-300 bg-gray-50 text-gray-500 text-sm'
 
-      .footer-line-xl.w-full.bg-white
+      .footer-line-xl.w-full
 
       .w-full.bg-gray-200
         .max-w-6xl.mx-auto.flex.flex-col.md:flex-row
