--- a/app/front/styles/application.scss
+++ b/app/front/styles/application.scss
@@ -4,3 +4,4 @@
 @import "application/flash-message.sass";
 @import "application/breadcrumb.sass";
 @import "application/home.sass";
+@import "application/custom.sass";
