--- a/app/front/styles/application/home.sass
+++ b/app/front/styles/application/home.sass
@@ -6,7 +6,7 @@
   min-height: 400px
 
 .home-baseline
-  background-color: rgba(var(--color-primary-rgb), 0.8);
+  background-color: rgba(var(--color-primary-rgb), 0.8)
   > div
     line-height: 1.4
     color: #fff
