--- a/app/front/styles/vendors.scss
+++ b/app/front/styles/vendors.scss
@@ -4,10 +4,15 @@ $fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
   --color-primary-hs: 232, 47%;
   --color-primary-l: 56%;
   --color-primary: hsl(var(--color-primary-hs),var(--color-primary-l));
-  --color-primary-light: hsl(var(--color-primary-hs),calc(var(--color-primary-l) + 5%));
-  --color-primary-dark: hsl(var(--color-primary-hs),calc(var(--color-primary-l) - 5%));
+  --color-primary-light: hsl(var(--color-primary-hs),calc(var(--color-primary-l) + 8%));
+  --color-primary-dark: hsl(var(--color-primary-hs),calc(var(--color-primary-l) - 8%));
   --color-primary-rgb: 92, 106, 196;
-  --color-secondary: #72fce0;
+
+  --color-secondary-hs: 168, 96%;
+  --color-secondary-l: 72%;
+  --color-secondary: hsl(var(--color-secondary-hs),var(--color-secondary-l));
+  --color-secondary-light: hsl(var(--color-secondary-hs),calc(var(--color-secondary-l) + 25%));
+  --color-secondary-dark: hsl(var(--color-secondary-hs),calc(var(--color-secondary-l) - 8%));
 }
 
 @import "~@fortawesome/fontawesome-free/scss/fontawesome";
