--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -29,8 +29,9 @@
       .p-3
         = render partial: 'profiles/card', collection: @profiles, as: :profile
 
-.flex.flex-col.md:flex-row.mx-auto.mb-24
-  .w-full.md:w-1/2.text-center.bg-gray-200.py-6.pr-6.md:mr-3
+.flex.flex-col.md:flex-row.mx-auto
+  .w-full.md:w-1/2.text-center.bg-gray-200.py-6.pr-6.md:mr-3.relative
+    = render 'layouts/bg-pic', filename: 'pic-home-01'
     .md:w-3/5.ml-auto
       p.text-xl.uppercase.mb-3 Vous souhaitez gagner en compétence ou professionnaliser votre équipe ?
       = image_pack_tag "picto/Picto-formations.svg", class: "w-20 mb-6 mx-auto"
@@ -41,11 +42,14 @@
       = image_pack_tag "picto/Picto-adhesion.svg", class: "w-20 mb-6 mx-auto"
       = link_to "Adhérer au pôle", main_page_path(@membership_page), class: "bg-primary hover:bg-primary-dark text-sm text-secondary uppercase  pt-3 pb-2 px-4"
 
-.container.mx-auto.text-primary.mb-24
-  h2.text-3xl.uppercase.mb-5 Dernières actualités
-  .flex.flex-col.md:flex-row
-    - @posts.each do |post|
-      .w-full.md:w-1/2.px-4
-        = render 'posts/card', post: post
+section.relative
+  = render 'layouts/bg-pic', filename: 'pic-home-02'
+  = render 'layouts/bg-pic', filename: 'pic-home-03'
+  .container.mx-auto.text-primary.pt-24
+    h2.text-3xl.uppercase.mb-5 Dernières actualités
+    .flex.flex-col.md:flex-row
+      - @posts.each do |post|
+        .w-full.md:w-1/2.px-4
+          = render 'posts/card', post: post
 
-  = link_to "Voir toutes les actualités", posts_path, class: "w-full text-center inline-block mt-4 uppercase text-sm underline"
+    = link_to "Voir toutes les actualités", posts_path, class: "w-full text-center inline-block mt-4 mb-24 uppercase text-sm underline"
