--- a/app/views/searches/_form.html.slim
+++ b/app/views/searches/_form.html.slim
@@ -1,5 +1,5 @@
 = form_tag search_path, method: :get do
-  .flex.rounded-md.shadow-sm
-    = text_field_tag :query, params[:query], class: "flex-1 px-2 block w-full rounded-none rounded-l-md border border-gray-300"
-    = button_tag "", class: 'inline-flex items-center px-3 rounded-r-md border border-l-0 border-gray-300 bg-gray-50 text-gray-500 text-sm' do
+  .flex
+    = text_field_tag :query, params[:query], placeholder: "Je recherche...", class: "flex-1 px-2 block w-full rounded-none border border-gray-100 bg-secondary-light"
+    = button_tag "", class: 'inline-flex items-center px-3 border border-l-0 border-gray-100 bg-gray-50 text-gray-500 text-sm' do
       i.fas.fa-search
