--- a/app/front/styles/application/breadcrumb.sass
+++ b/app/front/styles/application/breadcrumb.sass
@@ -2,8 +2,20 @@
   display: flex
   @apply px-8
   @apply py-3
-  @apply text-gray-700
+  @apply text-gray-500
+  text-transform: uppercase
 .breadcrumb-item:not(:last-child)
   margin-right: 0.2rem
   &:after
     content: ' > '
+    // content: "\f054"
+    // /* >> Name of the FA free font (mandatory), e.g.:
+    //            - 'Font Awesome 5 Free' for Regular and Solid symbols;
+    //            - 'Font Awesome 5 Pro' for Regular and Solid symbols (Professional License);
+    //            - 'Font Awesome 5 Brand' for Brands symbols. */
+    // font-family: 'Font Awesome 5 Free'
+    // /* >> Weight of the font (mandatory):
+    //            - 400 for Regular and Brands symbols;
+    //            - 900 for Solid symbols;
+    //            - 300 for Light symbols. */
+    // font-weight: 900
