--- a/app/front/styles/application/form.sass
+++ b/app/front/styles/application/form.sass
@@ -1,2 +1,23 @@
 form label.required:after
   content: " *"
+
+.c-checkbox
+  padding: 10px 0 8px
+  &:not(:last-child)
+    border-bottom: 1px solid #c5c5c5
+
+.c-checkbox__label
+  &:after
+    content: ""
+    display: inline-block
+    vertical-align: middle
+    width: 20px
+    height: 20px
+    border: 2px solid #c5c5c5
+    position: absolute
+    right: 0
+
+.c-checkbox input:checked + .c-checkbox__label::after
+  border-color: #afafaf
+  background: url('../images/checkmark.svg') center/12px no-repeat
+
