--- a/app/views/formations/index.html.slim
+++ b/app/views/formations/index.html.slim
@@ -1,42 +1,30 @@
-.container.mx-auto.mb-8
-  h1.text-6xl.font-bold.text-center.mt-16.mb-4.text-gray-900 Formations
+.flex.flex-col.md:flex-row.mt-4
+  .md:w-1/5
+  .md:w-4/5
+    = render 'home/breadcrumb'
+.flex.flex-col.md:flex-row.mt-4
+  .md:w-1/5 data-controller='manage-index'
+    details.md:hidden.px-8
+      summary.uppercase.text-primary.mb-3.cursor-pointer Filtrer
+      = render 'formations/filters'
+    .hidden.px-8.md:block
+      = render 'formations/filters'
 
-.flex
-  .md:w-1/4.px-8 data-controller='manage-index'
-    = form_tag formations_path, method: :get do
-      .mb-4.flex
-        .mr-2.font-bold
-          ' Tri : 
-        div
-          => select_tag :sort, \
-            options_for_select([["Formation #{Time.zone.now.year}", :by_formation_category],["Prochaines formations", :by_future]], params[:sort]), \
-            class:"w-full px-4 py-2", data: {action: 'change->manage-index#submitFilterForm'}
-
-      h3.text-xl.mb-3 Filtrer
-      .bg-gray-300.px-4.py-3.mb-8
-        h4.font-bold Par catégorie
-
-        - @all_formation_categories.each do |category|
-          div
-            = label_tag "by_formation_category[#{category.id}]" do
-              => check_box_tag "by_formation_category[]", category.id, \
-                params[:by_formation_category].present? && params[:by_formation_category].include?(category.id.to_s), \
-                id: "by_formation_category_#{category.id}", \
-                data: {action: 'change->manage-index#submitFilterForm'}
-              => category.title
-
-      - if @formation_programs.any?
-        h3.text-xl.mb-3 Programmes de formation
-        ul
-          - @formation_programs.each do |program|
-            li
-              = link_to program.title, url_for(program.document), class: 'underline', target: '_blank'
+    - if @formation_programs.any?
+      .hidden.md:block
+        h3.px-4.pt-4.py-3.text-xl.mb-3.bg-primary.text-white.itc-demi.uppercase Programmes pdf
+        .px-8
+          ul
+            - @formation_programs.each do |program|
+              li
+                = link_to program.title, url_for(program.document), class: 'underline', target: '_blank'
 
 
-  .md:w-3/4.px-8
+  .md:w-4/5.bg-white
+    h1.text-5xl.md:text-6xl.px-8.my-12.text-primary.itc-demi.uppercase Formations
     - if params[:sort] == 'by_future'
       = render partial: 'formations/formation_card', collection: @formations, as: :formation
     - else
       - @formations.each do |category, formations|
-        h2.text-4xl.font-bold.text-gray-900 = category.title
+        h2.px-8.text-4xl.text-primary.itc-demi.uppercase.mb-6 = category.title
         = render partial: 'formations/formation_card', collection: formations, as: :formation
