--- a/app/views/posts/_card.html.slim
+++ b/app/views/posts/_card.html.slim
@@ -6,10 +6,10 @@
   .main
     - if post.image.attached?
       = image_tag post.image.variant(resize_to_fill: [500, 300]), class: "w-full"
-    .px-6.py-4
-      h3.text-lg.uppercase
+    .py-4
+      h3.text-lg.uppercase.text-primary
         = link_to post.title, post_path(post)
-      
+
       p.text-gray-700.text-sm
         == post.description.to_plain_text.truncate(150)
     / .px-6.pt-4.pb-2
