--- a/app/views/themes/show.html.slim
+++ b/app/views/themes/show.html.slim
@@ -1,29 +1,40 @@
-.container.mx-auto.mb-6
-  h1.text-6xl.font-bold.text-center.mt-16.mb-4.text-gray-900 = @theme.title
-  p.text-center.text-4xl.text-gray-800.mb-16 = @theme.baseline
-  - if @theme.image.present?
-    = image_tag  @theme.image, class: "mb-8 mx-auto"
-  .mb-24== @theme.description
-
-
-  .flex
+.flex.flex-col.md:flex-row.mt-4
+  .md:w-1/6
+  .md:w-3/6.bg-white.p-6
+    h1.itc-demi.text-4xl.text-primary.uppercase.mt-6.mb-4 = @theme.title
+    p.itc-demi.text-xl.text-primary.uppercase.mb-16 = @theme.baseline
+    - if @theme.image.present?
+      = image_tag  @theme.image, class: "mb-8 mx-auto"
+    .mb-24== @theme.description
+  
+  .md:w-2/6.px-4.md:pr-0
     - if @theme.activities.enabled.any?
-      .w-2/3
-        h3.text-2xl.font-bold.mb-3 Nos actions
+      section.mb-6
+        .bg-primary.mb-3.px-6.pt-4.pb-3
+          h3.text-xl.uppercase.itc-demi.text-white Nos actions
         ul
           - @theme.activities.enabled.order_by_theme_interface_position.each do |activity|
-            li = link_to activity.title, activity_path(activity), class: "underline"
-
-
+            li = link_to activity.title, activity_path(activity), class: "text-primary underline"
     - if @theme.resources.enabled.any?
-      .w-1/3
-        h3.text-2xl.font-bold.mb-3 Ressources
+      section.mb-6
+        .bg-primary.mb-3.px-6.pt-4.pb-3
+          h3.text-xl.uppercase.itc-demi.text-white Ressources
         ul
           = render partial: 'resources/resource', collection: @theme.resources.enabled, as: :resource
 
-  - if @theme.posts.published.any?
-    h2.text-2xl.font-bold.mt-12.mb-4 Les actualités en lien avec ce thème
-    .flex
-      - @theme.posts.published.each do |post|
-        .w-1/2
-          = render 'posts/card', post: post
+    .bg-gray-200.p-12.text-center
+      h4.uppercase.mb-3= Setting.contact_bloc_description
+      = image_pack_tag "picto/Picto-contact.svg", class: "w-14 mb-6 mx-auto"
+      = link_to Setting.contact_bloc_button, basic_page_path(@contact_page), class: "bg-primary hover:bg-primary-dark text-sm text-white uppercase pt-3 pb-2 px-4"
+
+
+
+.flex.flex-col.md:flex-row.mt-4
+  .md:w-1/6
+  .md:4/6
+    - if @theme.posts.published.any?
+      h2.text-2xl.text-primary.uppercase.mt-12.mb-4 Dernières actualités
+      .grid.grid-cols-1.md:grid-cols-2.gap-4
+        - @theme.posts.published.each do |post|
+          div
+            = render 'posts/card', post: post
