Style activity and factorize

--- a/app/front/styles/application/layout.sass
+++ b/app/front/styles/application/layout.sass
@@ -111,3 +111,6 @@ html, body
   // background-position: 130% 140%
   background-size: 600px
   background-position: bottom -350px right -350px
+
+.bg-primary-bis
+  background-color: var(--color-primary)
