--- a/app/views/formations/index.html.slim
+++ b/app/views/formations/index.html.slim
@@ -12,7 +12,7 @@
 
     - if @formation_programs.any?
       .hidden.md:block
-        h3.px-4.pt-4.py-3.text-xl.mb-3.bg-primary.text-white.itc-demi.uppercase Programmes pdf
+        h3.px-4.pt-4.py-3.text-xl.mb-3.bg-primary-bis.text-white.itc-demi.uppercase Programmes pdf
         .px-8
           ul
             - @formation_programs.each do |program|
