--- a/app/front/styles/application/custom.sass
+++ b/app/front/styles/application/custom.sass
@@ -17,3 +17,7 @@
   width: 100%
   background-size: 600px
   background-position: bottom -350px right -350px
+
+.bg-primary-bis
+  background-image: url("../images/bg-primary-bis.png")
+  // background-color: var(--color-primary)
