--- a/app/views/activities/show.html.slim
+++ b/app/views/activities/show.html.slim
@@ -1,16 +1,15 @@
-.container.mx-auto
-  h1.text-6xl.font-bold.text-center.mt-16.mb-4.text-gray-900 = @activity.title
-  .flex
-    - @activity.themes.enabled.each do |theme|
-      .bg-primary.px-3.py-2.mr-2
-        = theme.title
-  - if @activity.image.present?
-    = image_tag  @activity.image, class: "mb-8 mx-auto"
-  .flex.mb-24
-    .w-2/3
+.flex.flex-col.md:flex-row.mt-4
+  .md:w-1/6
+  .md:w-3/6.bg-white.p-6
+    h1.itc-demi.text-4xl.text-primary.uppercase.mt-6.mb-4  = @activity.title
+    .flex
+      - @activity.themes.enabled.each do |theme|
+        .bg-primary.px-3.py-2.mr-2
+          = theme.title
+    - if @activity.image.present?
+      = image_tag  @activity.image, class: "mb-8 mx-auto"
+    .mb-24
       == @activity.description
-    - if @activity.resources.any?
-      .w-1/3
-        h3.text-2xl.font-bold.mb-3 Ressources
-        ul
-          = render partial: 'resources/resource', collection: @activity.resources, as: :resource
+
+  .md:w-2/6.px-4.md:pr-0
+    = render 'resources/section', resources: @activity.resources.enabled
