--- a/app/views/profiles/show.html.slim
+++ b/app/views/profiles/show.html.slim
@@ -1,26 +1,17 @@
-.container.mx-auto.mb-6
-  h1.text-6xl.font-bold.text-center.mt-16.mb-4.text-gray-900 = @profile.title
-  p.text-center.text-4xl.text-gray-800.mb-16 = @profile.baseline
-  - if @profile.image.present?
-    = image_tag  @profile.image, class: "mb-8 mx-auto"
-  .mb-24== @profile.description
+.flex.flex-col.md:flex-row.mt-4
+  .md:w-1/6
+  .md:w-3/6.bg-white.p-6
+    h1.itc-demi.text-4xl.text-primary.uppercase.mt-6.mb-4 = @profile.title
+    p.itc-demi.text-xl.text-primary.uppercase.mb-16 = @profile.baseline
+    - if @profile.image.present?
+      = image_tag  @profile.image, class: "mb-8 mx-auto"
+    .mb-24== @profile.description
 
+  .md:w-2/6.px-4.md:pr-0
+    = render 'activities/section', activities: @profile.activities.enabled
+    = render 'resources/section', resources: @profile.resources.enabled
 
-  .flex
-    .w-2/3
-      h3.text-2xl.font-bold.mb-3 Les actions en lien avec ce profil
-      ul
-        - @profile.activities.enabled.order_by_profile_interface_position.each do |activity|
-          li = link_to activity.title, activity_path(activity), class: "underline"
-
-    - if @profile.resources.any?
-      .w-1/3
-        h3.text-2xl.font-bold.mb-3 Ressources
-        ul
-          = render partial: 'resources/resource', collection: @profile.resources, as: :resource
-
-  h2.text-2xl.font-bold.mt-12.mb-4 Les actualités en lien avec ce profil
-  .flex
-    - @profile.posts.each do |post|
-      .w-1/2
-        = render 'posts/card', post: post
+.flex.flex-col.md:flex-row.mt-4
+  .md:w-1/6
+  .md:4/6
+    = render 'posts/section', posts: @profile.posts.published.order(published_at: :desc)
